projects/web-forms/css/form.css
/* Login
 -------------------------------------------------*/
.login {
	width: 65%;
	margin: 5% auto;
	padding: 2.5rem;
	background-color: #FFFFFF;
	border-radius: 5px;
	border-top: 5px solid #FF7043;
	color: #616161;
	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
}
.login h1 {
	display: inline-block;
}
.login span {
	display: inline-block;
	float: right;
	font-size: 0.75rem;
}
.login span a,
.signup span a {
	color: #616161;
	text-decoration: underline;
}
.login span a:hover,
.signup span a:hover {
	text-decoration: none;
}
.login-header {
	padding-bottom: 0.75rem;
	margin-bottom: 0.75rem;
}
.login-header:after {
	content: "";
	display: block;
	clear: both;
}
.login-header span {
	padding-top: 1.25rem;
}
.login-form input,
.login-form button {
	display: block;
	width: 100%;
}
.login-form label {
	display: inline-block;
}
.login-form label:after {
	content: "";
	display: block;
	clear: both;
}
.login-form input[type="email"],
.login-form input[type="password"],
.login-form input[type="text"] {
	width: 100%;
	height: 3rem;
	padding: 0.3125rem;
	margin-top: 0.3125rem;
	margin-bottom: 0.9375rem;
	font-size: 1.25rem;
	color: rgba(0,0,0,0.6);
	border: 1px solid #E0E0E0;
	border-radius: 3px;
	transition: 0.3s
}
.login-form input[type="email"]:focus,
.login-form input[type="password"]:focus {
	border: 2px solid #E0E0E0;
}





/* Sign Up Form
 ----------------------------------------------*/
.signup {
	width: 65%;
	margin: 5% auto;
	padding: 2.5rem;
	background-color: #FFFFFF;
	border-radius: 5px;
	border-top: 5px solid #FF7043;
	color: #616161;
	box-shadow: 0 2px 5px 0 rgba(0,0,0,0.25);
}
.signup h1 {
	display: inline-block;
}
.signup span {
	float: right;
	font-size: 0.75em;
}
.signup-form span {
	margin-bottom: 0.25em;
	font-style: italic;
}
.signup-header {
	padding-bottom: 0.75em;
	margin-bottom: 0.75em;
}
.signup-header:after {
	content: "";
	display: block;
	clear: both;
}
.signup-header span {
	padding-top: 20px;
}
.signup-form input,
.signup-form button {
	display: block;
	width: 100%;
}
.signup-form label {
	display: inline-block;
}
.signup-form label:after {
	content: "";
	display: block;
	clear: both;
}
.signup-form input[type="email"],
.signup-form input[type="password"],
.signup-form input[type="text"],
.signup-form input[type="date"] {
	width: 100%;
	height: 3rem;
	padding: 0.3125rem;
	margin-top: 0.3125rem;
	margin-bottom: 0.9375rem;
	font-size: 1.25rem;
	color: rgba(0,0,0,0.6);
	border: 1px solid #E0E0E0;
	border-radius: 3px;
}
.signup-form input[type="email"]:focus,
.signup-form input[type="text"]:focus,
.signup-form input[type="password"]:focus,
.signup-form input[type="date"]:focus {
	border: 3px solid #E0E0E0;
}

/** End Sign Up Form */

/** Search Form*/
.search {
	width: 65%;
	margin: 0 auto;
	padding: 2.5em;
	border: 1px solid #E0E0E0;
}
.search-form input[type="search"],
.search-form select {
	width: 100%;
	height: 2.5em;
	padding: 0.625em;
	margin-top: 0.3125em;
	margin-bottom: 0.625em;
	font-size: 1.25em;
	color: rgba(0,0,0,0.6);
	border: 1px solid #E0E0E0;
	border-radius: 3px;
}
.search-form select {
	background-color: transparent;
}
.search-form button {
	width: 100%;
}
/** End search */

/** Questionnaire */
.questionnaire {
	width: 70%;
	margin: 0 auto;
}
.questionnaire:after {
	content: "";
	display: block;
	clear: both;
}
.questionnaire-title {
	text-align: center;
}
.question {
	width: 100%;
	margin: 3% auto;
	padding: 2rem;
	background-color: #FFFFFF;
	border-radius: 5px;
	border-left: 5px solid #FF7043;
	color: #616161;
	box-shadow: 2px 0 5px 0 rgba(0,0,0,0.25);
}
.question-title h3 {
	color: #000000;
	font-size: 1.6rem;
	padding-bottom: 1rem;
}
/*.options {
	padding-left: 1rem;
}*/
.options label {
	display: block;
	width: 100%;
	padding: 0.625em 0;
	font-size: 1.125em;
}
.options label input[type="radio"] {
	margin-right: 0.9375em;
	border: 2px solid #E0E0E0;
	background-color: #fff;
	width: 1.25em;
    height: 1.25em;
    border-radius: 50% 50%;
    transition-duration: 0.3s;
	-webkit-transition-duration: 0.3s;
	-moz-transition-duration: 0.3s;
}
.options label input[type="radio"]:hover,
.options label input[type="radio"]:focus {
	margin-right: 0.8125em;
	border: 2px solid #E0E0E0;
	background-color: #FF7043;
	width: 1.25em;
    height: 1.25em;
    border-radius: 50% 50%;
    transition-duration: 0.3s;
	-webkit-transition-duration: 0.3s;
	-moz-transition-duration: 0.3s;
}
.questionnaire-form input[type="text"] {
	width: 40%;
	height: 2.5em;
	padding: 0.3125em;
	margin-top: 0.3125em;
	margin-bottom: 0.75em;
	font-size: 1em;
	color: rgba(0,0,0,0.6);
	border: 1px solid #E0E0E0;
	border-radius: 3px;
}
.questionnaire-form input[type="text"]:focus {
	border: 2px solid #E0E0E0;
}
.questionnaire-form button {
	float: right;
	min-width: 10em;
}





/* Color Builder
 ------------------------------------------------------*/
.color-builder {
	width: 65%;
	margin: 4% auto;
	padding: 2.5em;
	background-color: #FFFFFF;
	border-radius: 5px;
	color: #616161;
	box-shadow: 0 6px 10px 2px rgba(0,0,0,0.25);
}
.color-builder h1 {
	text-align: center;
}
.color-builder h1 span:first-child {
	color: #FF0000;
}
.color-builder h1 span:nth-child(2) {
	color: #00FF00;
}
.color-builder h1 span:nth-child(3) {
	color: #0000FF;
}
.color-builder h1 span:nth-child(4) {
	color: #490a3d;
}
.color-builder h1 span:nth-child(5) {
	color: #bd1550;
}
.color-builder h1 span:nth-child(6) {
	color: #e97f02
}
.color-builder h1 span:last-child {
	color: #f8ca00;
}
.color-builder-form textarea,
.color-builder-form input,
.color-builder-form button,
.color-builder-form label {
	display: block;
	width: 100%;
}
.color-builder-form textarea {
	height: 9em;
	max-width: 100%;
	margin: 1em 0;
	font-size: 1.25em;
	color: rgba(0,0,0,0.6);
	border: 1px solid #eeeeee;
	border-radius: 3px;
}
.color-builder-form label {
	margin-bottom: 1em;
}
.color-builder-form input[type="range"] {
	margin-bottom: 1.25em;
}
/* ... */

